# server_tray

./: Cargo.toml  readme.md
assets/javascripts/: application.js
src/: card.rs  log.rs  main.rs  server.rs  server_only.rs
src/thaiid/: apdu.rs  mod.rs  parser.rs  thai_id.rs
templates/: base.html  index.html
