[package]
name = "server_tray"
version = "0.1.0"
edition = "2024"

[dependencies]
tray-icon = "0.21"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
crossbeam-channel = "0.5"
image = "0.25.6"
chrono = "0.4.41"
tao = "0.34.0"
pcsc = "2.9.0"
once_cell = "1.21.3"
base64 = "0.22.1"

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-args=-Wl,--subsystem,windows"]
