[package]
name = "server_tray"
version = "0.1.0"
edition = "2024"

[dependencies]
tray-icon = "0.21"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
crossbeam-channel = "0.5"
image = "0.25.6"
chrono = "0.4.41"
tao = "0.34.0"
pcsc = "2.9.0"
once_cell = "1.21.3"
base64 = "0.22.1"
askama = "0.14.0"
open = "5.3.2"
sea-orm = { version = "1.1.17", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
serde = "1.0.228"
sea-orm-migration = "1.1.17"
async-trait = "0.1.89"


[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-args=-Wl,--subsystem,windows"]
